create-license/main/default/objects/Replicated_Download__c/Replicated_Download__c.object-meta.xml
<CustomObject>
    <label>Replicated Download</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Download Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Replicated Downloads</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>