create-license/main/default/objects/Replicated_Download__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Parent Account for this Replicated download</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Replicated Downloads</relationshipLabel>
    <relationshipName>Replicated_Downloads</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>