create-license/main/default/objects/Replicated_Download__c/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>Replicated application name</description>
    <label>App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>