create-license/main/default/objects/Replicated_Download__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <description>Name of the downloaded asset</description>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>