create-license/main/default/objects/Replicated_Download__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Type of downloaded asset</description>
    <label>Asset Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>