create-license/main/default/objects/Replicated_Download__c/fields/Asset_Version__c.field-meta.xml
<CustomField>
    <fullName>Asset_Version__c</fullName>
    <description>Version of the downloaded asset</description>
    <label>Asset Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>