create-license/main/default/objects/Replicated_Download__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description>Release channel name for the download</description>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>