create-license/main/default/objects/Replicated_Download__c/fields/Downloaded_At__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_At__c</fullName>
    <description>Timestamp of the asset download</description>
    <label>Downloaded At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>