create-license/main/default/objects/Replicated_Download__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>License type associated with the download</description>
    <label>License Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>