create-license/main/default/objects/Replicated_Download__c/fields/Replicated_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Replicated_Customer_Id__c</fullName>
    <description>Replicated customer ID associated with the download</description>
    <label>Replicated Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>